# providers

./: .coderabbit.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  Taskfile.yaml  copier.yml  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  update-sdk.yaml
scripts/: check_comments.sh  seed_store.py
taskfiles/: agno.Taskfile.yaml  anthropic.Taskfile.yaml  docling.Taskfile.yaml  gcp.Taskfile.yaml  kubernetes.Taskfile.yaml  openai.Taskfile.yaml  qdrant.Taskfile.yaml
templates/provider/template/: pyproject.toml.jinja
