[project]
name = "pragma-providers"
version = "0.4.1"
description = "Pragma-managed cloud providers"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
preview = true
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # Pyflakes
    "I",       # isort
    "PLC0415", # import-outside-top-level
    "UP",      # Pyupgrade
    "D",       # pydocstyle - docstring conventions
    "DOC",     # Ruff's docstring checks (parameters match signature)
    "PT",      # pytest rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "DOC",   # Docstring content rules (Returns, Raises, Yields sections)
]

[tool.ruff.format]
preview = true

[tool.ty.environment]
python-version = "3.13"
python-platform = "darwin"

[tool.ty.src]
exclude = ["**/tests/**", "**/__pycache__/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-v"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.1"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[dependency-groups]
dev = [
    "commitizen>=4.11.0",
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
]
